<resources>
    <string name="app_name">Metadjioo_DS</string>
    <string name="content_description">FILLER</string>
    <!-- Home -->
    <string name="click_to_start">Click anywhere to start the experiment</string>
    <string name="welcome">Welcome!</string>
    <string name="set_up_experience">Set up the experience</string>
    <string name="launch_experience">Launch the experience</string>
    <string name="join_our_community">Join our community</string>
    <string name="logging_in">Logging in</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choice_products_presented">Choice of products presented</string>
    <string name="choice_teaser_video">Choice of teaser video</string>
    <string name="choice_default_language">Choice of the default language</string>
    <string name="database_empty">The database is empty you should reload it</string>
    <string name="choice_additionnal_video">Choice additionnal video</string>
    <string name="validate">Validate</string>
    <string name="order_products_presented">Order of products presented</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="display">Display</string>
    <string name="choose_video">Choose video</string>
    <string name="language">Language</string>
    <!-- Identification -->
    <!-- Config -->
    <!-- MainPage -->
</resources>