<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white"
    android:paddingStart="40dp"
    android:paddingTop="30dp"
    android:paddingEnd="40dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/title_part_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/choice_products_presented"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout_wine_displayed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:divider="@drawable/table_divider"
        android:dividerPadding="15dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_part_2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/table_divider"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/image"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/display"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/choose_video"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/language"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>