<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/refresh_database"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/button_refresh_light_wine_translucent"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/go_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/button_arrow_left_light_wine_translucent"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_configuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_up_experience"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/choice_language"
                    android:name="com.metadjioo_ds.app.fragment.ChoiceDefaultLanguageFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_configuration"
                    tools:layout="@layout/choice_default_language" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/choice_teaser_video"
                    android:name="com.metadjioo_ds.app.fragment.ChoiceCompanyVideoFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choice_language"
                    tools:layout="@layout/choice_company_video" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/choice_products_displayed"
                    android:name="com.metadjioo_ds.app.fragment.ChoiceProductsDisplayedFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choice_teaser_video"
                    tools:layout="@layout/choice_wine_displayed" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/choice_order_products_displayed"
                    android:name="com.metadjioo_ds.app.fragment.ChoiceOrderProductsDisplayedFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choice_products_displayed"
                    tools:layout="@layout/choice_order_wine_displayed" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/choice_additionnal_video"
                    android:name="com.metadjioo_ds.app.fragment.ChoiceCompanyVideoFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.733"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choice_order_products_displayed"
                    tools:layout="@layout/choice_company_video" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/database_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_empty"
        android:textColor="@color/gray300"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>